resources/assets/scss/_cart.scss
/* ... */
.coupon-invalid{
    pointer-events: none;
    .coupon-box{
        background-color: #efefef;
        border-color: #d2d2d2;
        color: #808080;
        .radio-selection{
            color: #ddd;
            visibility: hidden;
        }
        .text-success{
            color: #ff353b !important;
        }
    }
}

